Move site generation to maven 3 style